--- a/.github/workflows/cl.yml
+++ b/.github/workflows/cl.yml
@@ -1,4 +1,4 @@
-name: refmem continuous integration test suite
+name: assig1 continuous integration test suite
 
 on:
   push:
@@ -12,6 +12,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: update-ubuntu
+      run: sudo apt-get update
+    - name: setup-dependencies
+      run: sudo apt-get install clang libcunit1 libcunit1-doc libcunit1-dev valgrind lcov
     - name: test-valgrind
       run: make memtest
     - name: test-freq-small
